--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1434,7 +1434,7 @@ a {
 }
 .cid-umWfC1ZLOS .item-wrapper {
   position: relative;
-  background: #a6a99c;
+  background: #dadada;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -1477,7 +1477,7 @@ a {
 .cid-umKF5L2GiR {
   padding-top: 0rem;
   padding-bottom: 0rem;
-  background-color: #a6a99c;
+  background-color: #dadada;
 }
 .cid-umKF5L2GiR .mbr-fallback-image.disabled {
   display: none;
@@ -1546,6 +1546,6 @@ a {
 .cid-ujJJXeSvrs {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #000000;
+  background-color: #dadada;
   overflow: hidden;
 }
